# neuralfabric

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
benchmarks/: benchmark_runner.py
docs/source/: conf.py  index.rst
examples/: 01_linear_regression.py  02_logistic_regression.py  03_decision_tree.py  04_neural_network_mlp.py  05_cnn_image_classification.py  06_rnn_sequence.py  07_transformer_from_scratch.py
src/neuralfabric/: __init__.py  base.py  config.py  exceptions.py  pipeline.py
src/neuralfabric/cluster/: __init__.py  dbscan.py  hierarchical.py  kmeans.py
src/neuralfabric/core/: __init__.py  autograd.py  device.py  dtype.py  ops.py  tensor.py
src/neuralfabric/datasets/: __init__.py  loaders.py
src/neuralfabric/decomposition/: __init__.py  pca.py  svd.py
src/neuralfabric/ensemble/: __init__.py  adaboost.py  bagging.py  gradient_boosting.py  random_forest.py
src/neuralfabric/linear_model/: __init__.py  elastic_net.py  lasso.py  linear_regression.py  logistic_regression.py  ridge.py
src/neuralfabric/metrics/: __init__.py  classification.py  clustering.py  regression.py
src/neuralfabric/model_selection/: __init__.py  cross_validation.py  grid_search.py  split.py  train_test_split.py
src/neuralfabric/naive_bayes/: __init__.py  gaussian_nb.py  multinomial_nb.py
src/neuralfabric/nn/: __init__.py  activations.py  functional.py  losses.py  module.py  parameter.py
tests/: conftest.py
tests/core/: test_tensor.py
tests/linear_model/: test_linear_regression.py  test_logistic_regression.py
tests/model_selection/: test_train_test_split.py
(+35 files in other folders)
