[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuralfabric"
version = "0.1.0.dev1"
description = "A from-scratch machine learning and deep learning framework, from linear regression to transformers."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Aryan Patel", email = "aryanpatel2906.ap@gmail.com" }]
keywords = ["machine-learning", "deep-learning", "transformer", "neural-network", "autograd"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.23",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "black", "ruff", "mypy", "pre-commit", "build", "twine"]
docs = ["sphinx", "sphinx-rtd-theme"]
viz = ["matplotlib"]

[project.urls]
Homepage = "https://github.com/aryanap07/neuralfabric"
Repository = "https://github.com/aryanap07/neuralfabric"
"Bug Tracker" = "https://github.com/aryanap07/neuralfabric/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"neuralfabric" = ["datasets/data/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
